# simple-api

./: .gitignore  docker-compose.yml  pyproject.toml
simple_api/: command.py
simple_api/api/: app.py
simple_api/api/router/: users.py
